Fix suggestions made by Natsuko

--- a/app/views/html_css/lessons/lesson_2.html.erb
+++ b/app/views/html_css/lessons/lesson_2.html.erb
@@ -1,4 +1,8 @@
-<h1><%= title_for(HtmlCss, 1, 1) %></h1>
+<h1><%= title_for(HtmlCss, 1, 2) %></h1>
+
+<p>
+  Now that you've taken the red pill, there's no going back. Welcome to the world coding.
+</p>
 
 <p>
   For your first intro to HTML and CSS, we are going to use Dash Assembly's HTML and CSS course because it's simply <i>awesome</i>.
@@ -21,7 +25,7 @@
 </p>
 
 <p>
-  Once you've completed the course, post a link to an uploaded screenshot of your Dash Assembly screen using <a href = "http://imgur.com/" target = "_blank">imgur</a> so that we can see that you've completed the course. We'll send you a thumbs up message, but in the meanwhile once you've finished this lesson, let's go ahead and learn some more HTML and CSS.
+  Once you've completed the course, post a link to an uploaded screenshot of your Dash Assembly screen using <a href = "http://imgur.com/" target = "_blank">imgur</a> so that we can see that you've completed the course. We'll send you a thumbs up message, but in the meanwhile once you've finished this lesson, let's go ahead to the next lesson and learn some more HTML and CSS.
 </p>
 
 <br>
