--- a/app/views/intro/lessons/lesson_3.html.erb
+++ b/app/views/intro/lessons/lesson_3.html.erb
@@ -25,7 +25,7 @@
 <ol>
 	<li>It's beginner friendly - you'll be making dynamic apps super quick!</li>
 	<li>Rails allows developers to develop super productively</li>
-	<li>Makes coder's lives easier</li>
+	<li>Makes coder's lives easier - just by typing in a few commands, Rails can generate a lot of files that do some super useful stuff</li>
   <li>Lots of startups use Ruby on Rails - it's in demand!</li>
   <li>Ruby on Rails has an awesome thriving community</li>
   <li>Lots of online support - many tutorials and friendly people</li>
