--- a/app/views/intro/lessons/lesson_4.html.erb
+++ b/app/views/intro/lessons/lesson_4.html.erb
@@ -15,7 +15,7 @@
 
 <h2>Ruby on Rails</h2>
 <p>
-	Ruby on Rails is a web framework that allows you to build dynamic apps using both front end and back end development. It uses Ruby as the language. In case you were wondering, web frameworks are indeed different from programming languages. Web frameworks allows you to build full web applications easily using programming languages, while programming languages are just languages that simply communicate with the computer.
+	Ruby on Rails is a web framework that allows you to build dynamic apps using both front end and back end development. It uses Ruby as the language. In case you were wondering, web frameworks are indeed different from programming languages. Web frameworks allows you to build full web applications easily using programming languages, while programming languages are just languages that simply communicate with the computer. Also in case you were wondering, dynamic apps are apps where data in the server changes dynamically, as opposed to just a static website where a database isn't needed.
 </p>
 
 <h2>HTML</h2>
@@ -25,7 +25,7 @@
 
 <h2>CSS</h2>
 <p>
-  CSS is a language that describes how the web page should be displayed. So basically with CSS, you can make the web page have a super pink background, make the fonts huge, or anything you want it to look like. Think of CSS like a blueprint for your design.
+  CSS is a language that describes how the web page should be displayed. So basically with CSS, you can make the web page have a super pink background, make the fonts huge, or anything you want it to look like. Think of CSS like a blueprint for your design. CSS kind of plays a role of being HTML's strict teacher. CSS basically lays out a blueprint for how the HTML should be displayed, just like how a strict teacher lays out a blueprint for how a student should behave.
 </p>
 
 <h2>JavaScript</h2>
