--- a/app/views/intro/lessons/lesson_2.html.erb
+++ b/app/views/intro/lessons/lesson_2.html.erb
@@ -22,15 +22,15 @@
 
 <br>
 
-<%= render partial: '/shared/quizzes', locals: { question: 'What does "Front End" typically refer to?', answer: "The stuff you actually see in your website - the design, the navigation bar, stuff like that.", number: 1 } %>
+<%= render partial: '/shared/quizzes', locals: { question: 'What does "Front End" typically refer to?', answer: "The stuff that you see on your screen - the design, the navigation bar, stuff like that.", number: 1 } %>
 
 <%= render partial: '/shared/quizzes', locals: { question: "What languages do you need to understand to be a front end developer?", answer: "HTML, CSS, and Javascript, because they are languages that are alive in the browser. In general, these languages are manipulate what you see in your browser.", number: 2 } %>
 
-<%= render partial: '/shared/quizzes', locals: { question: 'What does "Back End" typically refer to?', answer: "It's basically stuff related to the server and making sure the data is dealt with correctly.", number: 3 } %>
+<%= render partial: '/shared/quizzes', locals: { question: 'What does "Back End" typically refer to?', answer: "It's basically stuff related to the server and making sure the data is dealt with correctly. In general, you cannot see the back end on the screen, that's why it's called the back end. Kind of make sense? :)", number: 3 } %>
 
 <%= render partial: '/shared/quizzes', locals: { question: 'What is a "Full Stack" developer?', answer: "Full stack developers are people who can do both front end development and back end development.", number: 4 } %>
 
-<%= render partial: '/shared/quizzes', locals: { question: 'What is the difference between web sites and web applications?', answer: "Websites display static content and web applications have dynamic content with a live server.", number: 5 } %>
+<%= render partial: '/shared/quizzes', locals: { question: 'What is the difference between websites and web applications?', answer: "Websites only display static content that doesn't interact with a database. Web applications have content that interact with a database on a live server.", number: 5 } %>
 
 <br class = "clear">
 
