add lesson 3 and 4

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -16,6 +16,10 @@
   right: 10px;
 }
 
+.embed_video {
+	margin: 50px 0px;
+}
+
 .forum_section {
 	margin: 50px 0px;
 }
@@ -26,6 +30,11 @@
 
 .skill_logo {
 	height: 100px;
+}
+
+.screenshot {
+	width: 80%;
+	margin: 20px 0px;
 }
 
 .unindented_ul {
