--- a/app/views/intro/lessons/lesson_2.html.erb
+++ b/app/views/intro/lessons/lesson_2.html.erb
@@ -26,7 +26,7 @@
 
 <%= render partial: '/shared/quizzes', locals: { question: "What languages do you need to understand to be a front end developer?", answer: "HTML, CSS, and Javascript, because they are languages that are alive in the browser. In general, these languages are manipulate what you see in your browser.", number: 2 } %>
 
-<%= render partial: '/shared/quizzes', locals: { question: 'What does "Back End" typically refer to?', answer: "It's basically stuff related to the server and making sure the data is dealt with correctly. In general, you cannot see the back end on the screen, that's why it's called the back end. Kind of make sense? :)", number: 3 } %>
+<%= render partial: '/shared/quizzes', locals: { question: 'What does "Back End" typically refer to?', answer: "It's basically stuff related to the server and making sure the data is dealt with correctly. In general, you cannot see the back end on the screen, and that's why it's called the back end. Kind of make sense? :)", number: 3 } %>
 
 <%= render partial: '/shared/quizzes', locals: { question: 'What is a "Full Stack" developer?', answer: "Full stack developers are people who can do both front end development and back end development.", number: 4 } %>
 
