Added lessons to html and ss

--- a/app/views/html_css/lessons/lesson_4.html.erb
+++ b/app/views/html_css/lessons/lesson_4.html.erb
@@ -6,11 +6,11 @@
 </div>
 
 <p>
-  In this lesson, we're going to walk you through the steps of building a simple personal resume website. The point of this video is not really to teach you how HTML and CSS work, but more of the thought process of a web developer.
+  In this lesson, we're going to walk you through the steps of building a simple personal resume website. The point of this video is not really to teach you how HTML and CSS work, but to teach you the thought process of a web developer.
 </p>
 
 <p>
-  You'll notice how when faced with a problem, I quickly Google the question I have to get the answers I want. You'll also notice that you don't really have to memorize anything if you take this approach. You'll start to see that coding isn't that scary if all you have to do is look for answers on Google.
+  You'll notice how when faced with a problem, I quickly Google the question I have to get the answers I want. You'll also notice that you don't really have to memorize anything if you take this approach. You'll start to see that coding isn't that scary if all you have to do when you get stuck is look for answers on Google.
 </p>
 
 <p>
@@ -18,7 +18,7 @@
 </p>
 
 <p>
-  Once you've completed your resume website, let's go to GitHub and go to a page called "Gist". For me, if I look on the top navigation bar, I see a link that says "Gist". So let's find that link and click on it. If you can't find it, try hitting Command + F (Mac) or Control + F (Windows) that spawns up a search box, and enter "Gist". It will find the word for you and you'll be able to find the link.
+  Once you've completed your resume website, let's go to GitHub and go to a page called "Gist". For me, if I look on the top navigation bar, I see a link that says "Gist". So let's find that link and click on it. If you can't find it, try hitting Command + F (Mac) or Control + F (Windows) that spawns up a search box, and enter "Gist". It will find and jump to the word on the website for you and you'll be able to find the link.
 </p>
 
 <p>
