--- a/app/views/html_css/lessons/lesson_8.html.erb
+++ b/app/views/html_css/lessons/lesson_8.html.erb
@@ -26,7 +26,7 @@
   Let's go back to our browser and refresh the page. Cool, it's starting to look like a landing page!
 </p>
 
-<%= image_tag 'jumbotron.png' %>
+<%= image_tag 'jumbotron.png', class: 'screenshot' %>
 
 <br>
 
