--- a/app/views/html_css/lessons/lesson_6.html.erb
+++ b/app/views/html_css/lessons/lesson_6.html.erb
@@ -36,7 +36,7 @@
 	Now let's refresh the page and see what happens. Just like that, you should see the font of your "Hello" change to something much nicer. It should look something like this:
 </p>
 
-<div class = "row">
+<div class = "row screenshot_min">
 
 	<div class = "col-xs-6">
 		<%= image_tag 'hellowithoutbootstrap.png' %>
