update html css lesson

--- a/app/views/html_css/lessons/lesson_10.html.erb
+++ b/app/views/html_css/lessons/lesson_10.html.erb
@@ -21,8 +21,10 @@
 </p>
 
 <p>
-  Let's go back into our browser and refresh the page. It's starting to come together!
+  Let's go back into our browser and refresh the page. It's starting to come together! It should look something like below. By now, you should start figuring out the code yourself so I'll start not providing code hints ;) Good luck!
 </p>
+
+<%= image_tag 'bootstrapwell.png', class: 'screenshot' %>
 
 
 <p>
