--- a/app/views/html_css/lessons/lesson_7.html.erb
+++ b/app/views/html_css/lessons/lesson_7.html.erb
@@ -12,7 +12,7 @@
   If we click on "Navbar" on the navigation bar on the right hand side of the bootstrap website, it will take you to a section that explains how to implement the navbar. Let's just scroll down and copy the bunch of code at the first example they give us. It should look something like this:
 </p>
 
-<script src="https://gist.github.com/takehiromouri/0ddaf4962cae507b696e.js"></script>
+<div class = "gist" src="https://gist.github.com/takehiromouri/0ddaf4962cae507b696e.json"></div>
 
 <p>
   Let's go ahead and paste this into our body section of our HTML. Hop back into your browser and refresh the page, and boom, you see a navbar implemented just like that. Super awesome!
@@ -28,7 +28,7 @@
   Next, we want to change that text that says "Brand" into whatever our brand is. To change this, we can go into Sublime, simply hit Command + F and enter "Brand", and it will take us to the code where that text is contained. Let's replace this text with whatever you want. For me, I'm going to replace this with "Techrise". At this point, the code should look something like this:
 </p>
 
-<script src="https://gist.github.com/takehiromouri/310cc1030fec9128d691.js"></script>
+<div class = "gist" src="https://gist.github.com/takehiromouri/310cc1030fec9128d691.json"></div>
 
 <p>
   Awesome! Now we've got a navbar set up. Even though it doesn't really do anything right now, just like that, we already have a pretty clean looking navigation bar going.
