--- a/app/views/html_css/lessons/lesson_12.html.erb
+++ b/app/views/html_css/lessons/lesson_12.html.erb
@@ -13,7 +13,7 @@
 </p>
 	
 <p>
-	We can add these glyphicons in by adding a span with a class of the glyphicon. Let's look for a nice glyphicon that we can add in. For me, I like the education glyphicon so I'm going to go ahead and copy the text under the glyphicon. It should look something like "glyphicon glyphicon-education". Now at the beginning of our h1 tag inside the Jumbotron, let's add in a span with a class of the glyphicon. So for me, it would look like <code><span class = "glyphicon glyphicon-education"></span></code>.
+	We can add these glyphicons in by adding a span with a class of the glyphicon. Let's look for a nice glyphicon that we can add in. For me, I like the education glyphicon so I'm going to go ahead and copy the text under the glyphicon. It should look something like "glyphicon glyphicon-education". Now at the beginning of our h1 tag inside the Jumbotron, let's add in a span with a class of the glyphicon. So for me, it would look like <code>&lt;span class = "glyphicon glyphicon-education"&gt;&lt;/span&gt;</code>.
 </p>
 
 <p>
