gist turoblink compatibility

--- a/app/views/html_css/lessons/lesson_6.html.erb
+++ b/app/views/html_css/lessons/lesson_6.html.erb
@@ -16,7 +16,7 @@
   Now that we've saved this file as an HTML file, we can go ahead and start writing HTML code in here. Let's start off by adding our standard HTML tags.
 </p>
 
-<div class = "gist" src="https://gist.github.com/takehiromouri/e39bf18ff7b85f836046.json"></div>
+<div class = "gist" data-src="https://gist.github.com/takehiromouri/e39bf18ff7b85f836046.json"></div>
 
 <p>
 	Let's add an h1 to our body and add the text "Hello" to see if this actually works. Let's add it in and right click on the Sublime Text interface. Select "Open in Browser" and check if the page says "Hello".
@@ -30,7 +30,7 @@
   If we scroll down on this page, the first thing it says is something about a Bootstrap CDN. CDN stands for Content Delivery Network, and it basically provides developers with a bunch of files without having to download them into your computer or server. So in our case, instead of manually downloading Bootstrap's CSS and JavaScript files and adding them into our site, we can simply just copy and paste this little code that they have for us to add it in, and we'd have access to the Bootstrap CSS/JavaScript files. Pretty awesome right? Let's go ahead and add the Bootstrap CDN files into our head section of our HTML.
 </p>
 
-<div class = "gist" src="https://gist.github.com/takehiromouri/cd3a438d277ff84a0ed1.json"></div>
+<div class = "gist" data-src="https://gist.github.com/takehiromouri/cd3a438d277ff84a0ed1.json"></div>
 
 <p>
 	Now let's refresh the page and see what happens. Just like that, you should see the font of your "Hello" change to something much nicer. It should look something like this:
