--- a/app/views/html_css/lessons/lesson_8.html.erb
+++ b/app/views/html_css/lessons/lesson_8.html.erb
@@ -20,7 +20,7 @@
   Let's just add some text in here that tells users what our company does. Let's replace the text inside the h1 tag with our brand name. Let's then add some paragraphs about what we do. So in our case, I'm going to add an opening and closing p tag, and between those, I'm going to add some text like "Learn how to code with Techrise". And then I'm going to add another paragraph by adding an opening and closing p tag and inserting some text between those. So maybe something like "Learn HTML, CSS, JavaScript, Ruby, and Ruby on Rails". At this point, your code should look something similar to this.
 </p>
 
-<div class = "gist" src="https://gist.github.com/takehiromouri/e24bab044dc89b11faf3.json"></div>
+<div class = "gist" data-src="https://gist.github.com/takehiromouri/e24bab044dc89b11faf3.json"></div>
 
 <p>
   Let's go back to our browser and refresh the page. Cool, it's starting to look like a landing page!
