--- a/app/views/html_css/lessons/lesson_9.html.erb
+++ b/app/views/html_css/lessons/lesson_9.html.erb
@@ -60,7 +60,7 @@
   Let's copy the code that has the panel with a header and paste it into all 3 of our divs with the class of "col-md-4". Let's try refreshing our page and see if it works. The code should look something like below.
 </p>
 
-<div class = "gist" src="https://gist.github.com/takehiromouri/697479fe0661598a3b8e.json"></div>
+<div class = "gist" data-src="https://gist.github.com/takehiromouri/697479fe0661598a3b8e.json"></div>
 
 <%= image_tag 'bootstrappanels.png', class: 'screenshot' %>
 
