--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -21,7 +21,9 @@
 
 <%= simple_form_for :comment, url: forum_comments_path, method: :post, input_html: {class: 'form-horizontal'} do |f| %>
 	<%= f.input :title, required: true %>
-	<%= f.cktext_area :description, as: :text, input_html: {rows: 6}, required: true %>
+	<div data-no-turbolink>
+		<%= f.cktext_area :description, as: :text, input_html: {rows: 6}, required: true %>
+	</div>
 	<%= f.input :lesson, :as => :hidden, :input_html => { :value => params[:lesson]} %>
 	<%= f.input :forum_id, :as => :hidden, :input_html => { :value => params[:forum_id]} %>
 	<%= f.submit 'Submit Question', class: 'btn btn-primary' %>
