--- a/app/views/submission_comments/new.html.erb
+++ b/app/views/submission_comments/new.html.erb
@@ -9,7 +9,9 @@
 
 <%= simple_form_for :submission_comment, url: submission_submission_comments_path, method: :post, input_html: {class: 'form-horizontal'} do |f| %>
 	<%= f.input :title, required: true %>
-	<%= f.cktext_area :description, as: :text, input_html: {rows: 6}, required: true %>
+	<div data-no-turbolink>
+		<%= f.cktext_area :description, as: :text, input_html: {rows: 6}, required: true %>
+	</div>
 	<%= f.input :lesson, :as => :hidden, :input_html => { :value => params[:lesson]} %>
 	<%= f.input :submission_id, :as => :hidden, :input_html => { :value => params[:submission_id]} %>
 	<%= f.submit 'Submit Question', class: 'btn btn-primary' %>
