--- a/app/views/html_css/lessons/lesson_11.html.erb
+++ b/app/views/html_css/lessons/lesson_11.html.erb
@@ -49,7 +49,7 @@
   So let's go ahead and do this. Inside our <code>.container</code>, let's delete the <code>p</code> tag and replace it with a row. Inside the row, let's make 4 columns with the size of 3. So it should look something like this.
 </p>
 
-<div data-src="https://gist.github.com/takehiromouri/b328163b414e3873f3ca.json"></div>
+<div class = "gist" data-src="https://gist.github.com/takehiromouri/b328163b414e3873f3ca.json"></div>
 
 <p>
   Refresh the page and you should see nothing there. That's because we haven't added any content yet. First, let's add an <code>h4</code> header in each of our columns. So maybe "About", "Contact Us", "Join", "Contribute" might make sense. Refresh the page, and you should see the footer again.
@@ -59,7 +59,7 @@
   Now let's make a list of links under each of our headers. If you can recall, we can do this by using <code>ul</code> tags (unordered lists) and <code>li</code> tags (list elements). Inside each <code>li</code>, let's create a link.
 </p>
 
-<div data-src="https://gist.github.com/takehiromouri/e6b8ab2b403567f54025.json"></div>
+<div class = "gist" data-src="https://gist.github.com/takehiromouri/e6b8ab2b403567f54025.json"></div>
 
 <p>
   We refresh the page and now we see all the list elements. There's one problem - the list has bullet points which we probably don't want. Let's get rid of those.
