--- a/app/views/html_css/lessons/lesson_12.html.erb
+++ b/app/views/html_css/lessons/lesson_12.html.erb
@@ -34,7 +34,7 @@
   After we've added some glyphicons, look for things you can improve to look the site look better. Your code should now look something like the code below.
 </p>
 
-<div data-src="https://gist.github.com/takehiromouri/fad68fb0aee1f6acaa60.json"></div>
+<div class = "gist" data-src="https://gist.github.com/takehiromouri/fad68fb0aee1f6acaa60.json"></div>
 
 <%= image_tag 'bootstrapfinal1.png', class: 'screenshot' %>
 <%= image_tag 'bootstrapfinal2.png', class: 'screenshot' %>
