center lesson text to make it more readable

--- a/app/views/html_css/lessons/lesson_11.html.erb
+++ b/app/views/html_css/lessons/lesson_11.html.erb
@@ -9,7 +9,7 @@
 </p>
 
 <div class = "row">
-	<%= render partial: '/shared/quizzes', locals: { question: 'How can we possibly find out how to add a footer using bootstrap?', answer: 'Simply Google "bootstrap footer", or experiment yourself with Bootstrap. ', number: 1 } %>
+	<%= render partial: '/shared/quizzes', locals: { question: 'How can we possibly find out how to add a footer using bootstrap?', answer: 'Just Google "bootstrap footer", or experiment with Bootstrap yourself :) ', number: 1 } %>
 </div>
 
 <br class = "clear">
