--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -61,7 +61,7 @@
         </div>
         <div class="row">
             <div class="col-lg-4 col-lg-offset-2">
-              <h3>Have no prior coding experience? You can still learn how to build web applications with Ruby on Rails in just 3 months</h3>
+              <h3 style = "color:#2C3E50;">Have no prior coding experience? You can still learn how to build web applications with Ruby on Rails in just 3 months</h3>
               <p>
                 Learning to code isn’t hard - if you have the right support. 
               </p>
