--- a/app/views/intro/show.html.erb
+++ b/app/views/intro/show.html.erb
@@ -1,1 +1,3 @@
-<%= render :file => "app/views/intro/lessons/lesson_#{@lesson}" %>
+<div class = "col-xs-offset-1 col-xs-10">
+	<%= render :file => "app/views/intro/lessons/lesson_#{@lesson}" %>
+</div>
