--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,8 +4,8 @@
         <div class="container">
             <div class="row">
                 <div class="footer-col col-md-4">
-                    <h3>Location</h3>
-                    <p>Somewhere<br>on the internet</p>
+                    <h3>Email</h3>
+                    <p>techrisecoding@gmail.com</p>
                 </div>
                 <div class="footer-col col-md-4">
                     <h3>Around the Web</h3>
@@ -32,7 +32,7 @@
                 </div>
                 <div class="footer-col col-md-4">
                     <h3>About Techrise</h3>
-                    <p>Techrise aims to give awesome students access to awesome resources around the internet so they can start building awesome ideas.</p>
+                    <p>Techrise teaches awesome people how to build awesome ideas</p>
                 </div>
             </div>
         </div>
