fix submissions bug

--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'Back to lesson', submission_back_to_lesson %>
+<%= link_to 'Back to lesson', back_to_lesson %>
 
 <h3><%= @comment.title %></h3>
 <%= raw(@comment.description) %>
