fix mailer bugs

--- a/app/views/submission_comments/new.html.erb
+++ b/app/views/submission_comments/new.html.erb
@@ -14,5 +14,5 @@
 	</div>
 	<%= f.input :lesson, :as => :hidden, :input_html => { :value => params[:lesson]} %>
 	<%= f.input :submission_id, :as => :hidden, :input_html => { :value => params[:submission_id]} %>
-	<%= f.submit 'Submit Question', class: 'btn btn-primary' %>
+	<%= f.submit 'Submit', class: 'btn btn-primary' %>
 <% end %>
