change lesson mobile layout

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,7 +12,7 @@
 
       <div class="field">
         <%= f.label :email %><br />
-        <%= f.email_field :email, autofocus: true, required: true, class: 'form-control' %>
+        <%= f.email_field :email, required: true, class: 'form-control' %>
       </div>
 
       <div class="field">
