--- a/app/views/html_css/show.html.erb
+++ b/app/views/html_css/show.html.erb
@@ -1,3 +1,3 @@
-<div class = "col-xs-offset-1 col-xs-10">
+<div class = "col-sm-offset-1 col-sm-10">
 	<%= render :file => "app/views/html_css/lessons/lesson_#{@lesson}" %>
 </div>
