--- a/app/views/submission_comments/_submission_for_lesson.html.erb
+++ b/app/views/submission_comments/_submission_for_lesson.html.erb
@@ -5,14 +5,14 @@
 	Submit your work here and get feedback!
 </p>
 
-<% submission_for_lesson = Submission.find_by(name: name) %>
+<% submission = Submission.find_by(name: name) %>
 
-	<%= link_to 'Submit Your Work', new_submission_submission_comment_path(submission_id: submission_for_lesson, lesson: lesson), class: 'btn btn-danger', locals: {lesson: lesson} %>
+	<%= link_to 'Submit Your Work', new_submission_submission_comment_path(submission_id: submission, lesson: lesson), class: 'btn btn-danger', locals: {lesson: lesson} %>
 
 	<br>
 	<br>
 
-		<% submission_for_lesson.submission_comments.where(lesson: lesson).order("created_at DESC").each do |comment| %>
+		<% submission.submission_comments.where(lesson: lesson).order("created_at DESC").each do |comment| %>
 			<h4><%= link_to comment.title, submission_submission_comment_path(comment.submission_id, comment.id) %> <span class = "comment_list">by <%= submission_comment_owner(comment) %></span></h4>
 		<% end %>
 
