precompile assets and change marketing page

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -153,13 +153,13 @@
                 Many resources are great at teaching coding, but some are aimed at being general, teaching you basic syntax and how the language works. Which is awesome, but it doesn’t teach you how to actually start building web apps.
               </p>
               <p>
-                There are also other resources aimed at giving you a full intensive workload that would take a lot of time and energy to complete. These are awesome too, but it honestly takes an incredible amount of self discipline and motivation to go through all of the material.
+                There are also resources that go super into detail and feed you a lot of information. These are awesome, but it probably isn't ideal for complete beginners.
               </p>
               
             </div>
             <div class="col-lg-4">
               <p>
-                At Techrise, our goal is to combine these resources to give you just the right amount of work so that you’ll learn the basics of web development and be able to start learning more advanced things on your own.
+                At Techrise, our goal is to give you fun and interactive lessons where you’ll learn how to build real world web applications with a devoted mentor so that you'll be able to start learning more advanced things on your own.
               </p>
               <p>
                 Imagine building your ideas, building your friend’s business idea, or just building a cool app to solve one of your daily problems. All that is possible by learning how to code.
