change footer content

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,15 +4,15 @@
         <div class="container">
             <div class="row">
                 <div class="footer-col col-md-4">
-                    <h3>Email</h3>
-                    <p>techrisecoding@gmail.com</p>
+                    <h3>Have any Questions?</h3>
+                    <p>Feel free to contact us at techrisecoding@gmail.com!</p>
                 </div>
-                <div class="footer-col col-md-4">
+                <!-- <div class="footer-col col-md-4">
                     <h3>Around the Web</h3>
                     <p>
                         Coming Soon!
                     </p>
-                    <!-- <ul class="list-inline">
+                    <ul class="list-inline">
                         <li>
                             <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                         </li>
@@ -28,12 +28,12 @@
                         <li>
                             <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
                         </li>
-                    </ul> -->
-                </div>
-                <div class="footer-col col-md-4">
+                    </ul>
+                </div> -->
+                <!-- <div class="footer-col col-md-4">
                     <h3>About Techrise</h3>
                     <p>Techrise teaches awesome people how to build awesome ideas</p>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -41,7 +41,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    Copyright &copy; Techrise 2015
+                    Copyright &copy; Techrise 2016
                 </div>
             </div>
         </div>
