--- a/app/views/ideator_lessons/lessons/lesson_2.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_2.html.erb
@@ -34,7 +34,7 @@
 	Now what you’re going to do is copy the code right beneath that and paste it into your terminal. It should look something like this:
 </p>
 
-<code>git remote add origin git@github.com:takehiromouri/test.git</code><br>
+<code>git remote add origin git@github.com:username/test.git</code><br>
 <code>git push -u origin master</code><br>
 
 <p>
