--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,7 @@
 
       <div class="field">
         <%= f.label :name %><br />
-        <%= f.email_field :name, autofocus: true, required: true, class: 'form-control' %>
+        <%= f.text_field :name, autofocus: true, required: true, class: 'form-control' %>
       </div>
 
       <div class="field">
